# tinyagent

./: .env.example  main.py  pyproject.toml
src/: agent.py  client.py  model.py  tool.py
src/tooling/: parse.py  tool.py
