[project]
name = "tinyagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docstring-parser>=0.18.0",
    "openai>=2.38.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
    "ty>=0.0.40",
]
